--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,20 @@
 version: '3.1'
 
 services:
+  review:
+    build: .
+    restart: always
+    ports:
+      - 3001:3000
 
-  db:
+  reviews_db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
       - 3306:3306
+    volumes:
+      - ./mysql:/var/lib/mysql
+      - ./sql:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: 1234
