--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: "3.1"
 
 services:
   review:
@@ -7,7 +7,7 @@ services:
     ports:
       - 3001:3000
 
-  reviews_db:
+  reviewsDb:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
