--- a/package.json
+++ b/package.json
@@ -55,14 +55,13 @@
     "@loopback/rest": "^2.0.0",
     "@loopback/rest-explorer": "^1.4.10",
     "@loopback/service-proxy": "^1.3.17",
-    "@types/mocha": "^7.0.2",
-    "loopback-connector-mysql": "^5.4.2",
-    "mocha": "^7.1.1"
+    "loopback-connector-mysql": "^5.4.2"
   },
   "devDependencies": {
     "@loopback/build": "^3.1.1",
     "@loopback/eslint-config": "^5.0.3",
     "@loopback/testlab": "^2.0.1",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^10.17.14",
     "@typescript-eslint/eslint-plugin": "2.19.0",
     "@typescript-eslint/parser": "2.19.0",
@@ -70,6 +69,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-eslint-plugin": "^2.2.1",
     "eslint-plugin-mocha": "^6.2.2",
+    "mocha": "^7.1.1",
     "source-map-support": "^0.5.16",
     "typescript": "~3.7.5"
   }
