--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
     "docker:build": "docker build -t review-service .",
     "docker:test": "docker-compose -f docker-compose.test.yml build && docker-compose -f docker-compose.test.yml up --exit-code-from reviews",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up",
     "docker:run": "docker run -p 3000:3000 -d review-service",
     "migrate": "node ./dist/migrate",
     "prestart": "npm run build",
