--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,4 +1,4 @@
-version: "2.1"
+version: '2.1'
 
 services:
   reviews:
@@ -17,14 +17,10 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - reviewsDb:/var/lib/mysql
       - ./sql:/docker-entrypoint-initdb.d
     environment:
       MYSQL_ROOT_PASSWORD: 1234
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
       timeout: 20s
       retries: 10
-
-volumes:
-  reviewsDb:
